@@ -1,4 +1,5 @@
 2009-09-02: Jason Long <jlong@messiah.edu>
+ * t/adsp.t: a test script for checking AuthorDomainPolicy.pm
  * lib/Mail/DKIM/AuthorDomainPolicy.pm: use d= tag not i= tag when
    checking for first-party signatures; fix for testing() method
    not found error; fix for "all" and "discardable" not doing the
